objects/Branch_Management_Permission__c.object
<CustomObject>
    <description>This object stores the permissions relating to a user per environment</description>
    <fields>
        <fullName>Allow_Deployments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Branch Management Permissions</relationshipLabel>
        <relationshipName>Branch_Management_Permissisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Branch Management Permissisions</relationshipLabel>
        <relationshipName>Branch_Management_Permissisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Branch Management Permission</label>
    <nameField>
        <displayFormat>BMP-{000000}</displayFormat>
        <label>Branch Management Permission Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Management Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>